# Downloader-NX

./: .clang-format  .gitignore  Makefile  README.md  meson.build
.github/workflows/: main.yml  pc.yml  switch.yml
downloader-forwarder/: Makefile
downloader-forwarder/source/: main.cpp
include/: constants.hpp  download.hpp  homeTab.hpp  home_tab.hpp  input.hpp  mainFrame.hpp  main_activity.hpp  progressEvent.hpp  updater_tab.hpp  util.hpp  workerPage.hpp
lib/borealis/: .gitrepo
lib/cpr/: .gitrepo  CMakeLists.txt
lib/cpr/cpr/: CMakeLists.txt  parameters.cpp  payload.cpp  session.cpp  utilities.cpp
lib/cpr/include/: CMakeLists.txt
lib/cpr/include/cpr/: callback.h  cprtypes.h  curlholder.h  response.h  ssl_options.h  utilities.h
lib/cpr/test/: util_tests.cpp
lib/nxdumptool/: http.cpp  http.hpp
lib/switch-zipper/: .gitrepo
lib/zipper/: .gitrepo
lib/zipper/minizip/: .gitrepo
resources/i18n/en-US/: main.json  text.json
resources/xml/activity/: main.xml
resources/xml/tabs/: home.xml  updater.xml
scripts/: source-wildcard.sh
source/: constants.cpp  download.cpp  homeTab.cpp  home_tab.cpp  input.cpp  main.cpp  mainFrame.cpp  updater_tab.cpp  util.cpp  workerPage.cpp
